--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    padding: 3em;
+    padding: 1em 3em;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.1rem;
     background: var(--bg-color);
@@ -27,8 +27,34 @@ body{
     display: none;
 }
 
-header{
+nav{
+    width:100%;
+   display: flex;
+   justify-content: flex-end; 
+   margin-bottom:3%;
+}
+nav a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
     
+}
+
+nav a span{
+    font-weight: 700;
+    color: var(--accent-color);
+    transition: color .5s;
+}
+
+nav a:hover span{
+    color: var(--primary-color);
+}
+
+header p{
+    color: var(--secondary-color);
+    font-weight:600;
+    text-transform: uppercase;
 }
 
 .scaffold{
